<resources>
    <string name="app_name">FrutiApp</string>
    <string name="et_nombre">Como te llamas?</string>
    <string name="boton">Jugar</string>

    <string name="et_vidas">Manzanas:</string>
    <string name="jugador_nombre">Jugador:</string>
    <string name="total_socore">Score: 0</string>
    <string name="btn_sumar">Comprobar</string>
    <string name="et_respuesta">Respuesta</string>
</resources>
