<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperprincipal"
    tools:context=".Main2Activity_Nivel5">

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/jugador_nombre"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:text="@string/total_socore"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nombre" />

    <TextView
        android:id="@+id/textView_manzanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="24dp"
        android:text="@string/et_vidas"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView_vidas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_score" />

    <ImageView
        android:id="@+id/imageView_vidas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="175dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/textView_manzanas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_manzanas"
        app:layout_constraintTop_toTopOf="@+id/textView_manzanas"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/imageViewNumUno"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="276dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView_signo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imageView_signo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/editText_Resultado"
        app:layout_constraintEnd_toStartOf="@+id/imageView_NumDos"
        app:srcCompat="@drawable/multiplicacion" />

    <ImageView
        android:id="@+id/imageView_NumDos"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="17dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cero" />

    <EditText
        android:id="@+id/editText_Resultado"
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="232dp"
        android:ems="10"
        android:hint="@string/et_respuesta"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="232dp"
        android:background="@drawable/fondoboton"
        android:onClick="Comparar"
        android:text="@string/btn_sumar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>